src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Used by the RCRM project, to specify the product family from which the Sales Manager is trying to sell to the customer.</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airport IS</fullName>
                </value>
                <value>
                    <fullName>Airsat</fullName>
                </value>
                <value>
                    <fullName>APCS Products</fullName>
                </value>
                <value>
                    <fullName>Cargo IS</fullName>
                </value>
                <value>
                    <fullName>DDS</fullName>
                </value>
                <value>
                    <fullName>E&amp;F Services</fullName>
                </value>
                <value>
                    <fullName>FSS Products</fullName>
                </value>
                <value>
                    <fullName>GDP</fullName>
                </value>
                <value>
                    <fullName>ICCS Products</fullName>
                </value>
                <value>
                    <fullName>IFG Products</fullName>
                </value>
                <value>
                    <fullName>Market IS</fullName>
                </value>
                <value>
                    <fullName>MER Products</fullName>
                </value>
                <value>
                    <fullName>Pax IS</fullName>
                </value>
                <value>
                    <fullName>SFO Products</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>TACT</fullName>
                </value>
                <value>
                    <fullName>TIESS</fullName>
                </value>
                <value>
                    <fullName>Timatic</fullName>
                </value>
                <value>
                    <fullName>Weblink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCRM_Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Manager for the RCRM products added to the Opportunity. Used for email notifications and assignment of Contract and future renewal Opportunities.</description>
        <label>RCRM Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RCRM_Validation_Status__c</fullName>
        <description>Describes the status of the opportunity validation by the Product Manager of the RCRM product.</description>
        <label>RCRM Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No validation yet</fullName>
                    <default>true</default>
                    <label>No validation yet</label>
                </value>
                <value>
                    <fullName>Sent to PM for validation</fullName>
                </value>
                <value>
                    <fullName>Validated by PM</fullName>
                </value>
                <value>
                    <fullName>Rejected by PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Europe</fullName>
                    <default>true</default>
                    <label>Europe</label>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia &amp; Pacific</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_reason__c</fullName>
        <description>Used by the RCRM project, the field needs to contain the reason why the PM rejects an opportunity. Mandatory for rejections, ignored otherwise.</description>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Oscar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Oscar linked to the opportunity (GDI Process)</description>
        <label>Related Oscar</label>
        <referenceTo>AMS_OSCAR__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_date__c</fullName>
        <description>For RCRM Opportunities with a stage name of &quot;Future renewal&quot;, represents the date when a renewal reminder email is sent.</description>
        <label>Reminder date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_duration_in_months__c</fullName>
        <description>Used by the RCRM project for calculation of the start and end dates of the renewal</description>
        <inlineHelpText>This is used at contract renewal time and represents the length in months of the renewed contract. This needs to be an integer number.</inlineHelpText>
        <label>Contract Renewal Cycle (in months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_under_Sales_Responsibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether it is the Sales Manager or the Product Manager who will handle the renewal of the contract. Used by the RCRM project.</description>
        <label>Renewal under Sales Responsibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <description>Used by the RCRM project for reporting, to differentiate between revenue already booked and estimated revenue.</description>
        <formula>IF ( IsClosed, &apos;Booked&apos;, &apos;Estimated&apos;)</formula>
        <label>Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Order_Number__c</fullName>
        <description>SABA order number related to the opportunity won.</description>
        <externalId>true</externalId>
        <label>SABA Order Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sold_To__c</fullName>
        <label>SAP Sold To #</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_All_Areas__c</fullName>
        <label>SP All Areas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Collaborators__c</fullName>
        <description>Used to add colaborators that played an important role in the opportunity. When the source is a Country Manager, please use the Lead Source field instead.</description>
        <inlineHelpText>Used to add colaborators that played an important role in the opportunity. When the source is a Country Manager, please use the Lead Source field instead.</inlineHelpText>
        <label>Sales Collaborators</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adrian GANEA</fullName>
                </value>
                <value>
                    <fullName>Amy Yu</fullName>
                </value>
                <value>
                    <fullName>Antonio La Verghetta</fullName>
                </value>
                <value>
                    <fullName>Barbara Liu</fullName>
                </value>
                <value>
                    <fullName>Ben Barrocas</fullName>
                </value>
                <value>
                    <fullName>Boris Padilla</fullName>
                </value>
                <value>
                    <fullName>Bruno Roussel</fullName>
                </value>
                <value>
                    <fullName>Burkhard Lahr</fullName>
                </value>
                <value>
                    <fullName>Caroline Karanja</fullName>
                </value>
                <value>
                    <fullName>Claudine Breton</fullName>
                </value>
                <value>
                    <fullName>Craig Astridge</fullName>
                </value>
                <value>
                    <fullName>Daniel Shemi</fullName>
                </value>
                <value>
                    <fullName>Dominic Freienstein</fullName>
                </value>
                <value>
                    <fullName>Ewemade Atake</fullName>
                </value>
                <value>
                    <fullName>Gurjit Gill</fullName>
                </value>
                <value>
                    <fullName>José Rodríguez</fullName>
                </value>
                <value>
                    <fullName>Jose Solorzano</fullName>
                </value>
                <value>
                    <fullName>Jos van Putten</fullName>
                </value>
                <value>
                    <fullName>Joyce Goh</fullName>
                </value>
                <value>
                    <fullName>Laetitia Slottved</fullName>
                </value>
                <value>
                    <fullName>Louise Denis</fullName>
                </value>
                <value>
                    <fullName>Lu Luo</fullName>
                </value>
                <value>
                    <fullName>Madeleine Dufour</fullName>
                </value>
                <value>
                    <fullName>Mariem Agouzoul</fullName>
                </value>
                <value>
                    <fullName>Michael Huntington</fullName>
                </value>
                <value>
                    <fullName>Monica Papuga</fullName>
                </value>
                <value>
                    <fullName>Ofelia Barcena</fullName>
                </value>
                <value>
                    <fullName>Phil Gennaoui</fullName>
                </value>
                <value>
                    <fullName>Philippe Siponen</fullName>
                </value>
                <value>
                    <fullName>Rabih Kikano</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <description>This field can help tagging opportunities to one of IATA&apos;s sales teams. If you belong to a group that does not appear in the list, please contact one of the administrators.</description>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MACS - Central Direct Sales</fullName>
                </value>
                <value>
                    <fullName>MACS - Channel Partners</fullName>
                </value>
                <value>
                    <fullName>MACS - On Line Store</fullName>
                </value>
                <value>
                    <fullName>MACS - Regional Sales</fullName>
                </value>
                <value>
                    <fullName>MACS - SPP Team</fullName>
                </value>
                <value>
                    <fullName>Events (Worldtek)</fullName>
                </value>
                <value>
                    <fullName>MACS - Non-MACS</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
                <value>
                    <fullName>Regional Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsorship_Description_Events__c</fullName>
        <label>Sponsorship Description - Events</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The starting date of the contract&apos;s current cycle.</description>
        <label>Current Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Will_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Config</label>
        <referenceTo>zqu__ZuoraConfig__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Opportunity_type__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Future renewal</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Opportunity.RCRM_Opportunity</value>
        </filters>
        <label>All Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Days_Left_To_Close__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>7.,z.</value>
        </filters>
        <label>All Opportunities - Closing Next Month</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSAllIATACommercial</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>z.,7.</value>
        </filters>
        <label>All Opportunities - Closing This Month</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSAllIATACommercial</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>IDFSIDOSales</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.GDP_Opportunities</value>
        </filters>
        <label>IDFS IDO Sales</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DistributionGlobalDataProducts</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MACSSalesAllLostOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Main_Loss_Reason__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>z.</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Opportunities Lost - Last 3 months</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSAllIATACommercial</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MACS_Opportunities_closing_this_month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.FieldSales</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>MACS - Opportunities closing this month</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSSalesMarketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MAD_Sales_Lost_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>MAD - Sales</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>z. Lost</value>
        </filters>
        <label>MAD Sales - Lost Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>HUBMadrid</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MAD_Sales_Open</fullName>
        <booleanFilter>1 and 2 and 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>MAD - Sales</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>7. Closed Sales / Sold,z. Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Future renewal</value>
        </filters>
        <label>MAD Sales - Open Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MAD_Sales_Won_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>7. Closed Sales / Sold</value>
        </filters>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>MAD - Sales</value>
        </filters>
        <label>MAD Sales - Won Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>HUBMadrid</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MRO_SmartHub_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>MRO</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Smarthub</value>
        </filters>
        <label>MRO SmartHub Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>MRO_SmartHub_External_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities_Won</fullName>
        <columns>OPPORTUNITY.WON</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>7. Closed Sales / Sold</value>
        </filters>
        <label>My Opportunities - Won</label>
        <language>en_US</language>
        <sharedTo>
            <group>HUBMadrid</group>
            <group>MACSDirectSalesAll</group>
            <group>MACSSalesMarketing</group>
            <role>DistributionGlobalDataProducts</role>
            <role>DistributionOperationalMgmtHO</role>
            <role>IDOIndustrySolutions</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_All_Open</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Opportunity_type__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>7.,z.</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Future renewal</value>
        </filters>
        <label>My Opportunities - All Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_with_Past_Closing_Dates</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Left_To_Close__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>rabih</value>
        </filters>
        <label>My Opportunities -  Outdated</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSAllIATACommercial</group>
            <group>MACSDirectSalesAll</group>
            <group>MACSSalesMarketing</group>
            <role>DistributionGlobalDataProducts</role>
            <role>DistributionOperationalMgmtHO</role>
            <role>IDOIndustrySolutions</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Future renewal</value>
        </filters>
        <label>New Opportunities - This Week</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>FieldSales</fullName>
        <active>true</active>
        <businessProcess>Opportunity</businessProcess>
        <description>Long-cycle sales process, based on stages and close dates in the future</description>
        <label>Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>GDI_FinancialSecurity</fullName>
        <active>true</active>
        <businessProcess>GDI Financial Security</businessProcess>
        <description>GDI Financial Security Staging Object</description>
        <label>GDI Financial Security</label>
    </recordTypes>
    <recordTypes>
        <fullName>GDP_Opportunities</fullName>
        <active>true</active>
        <businessProcess>GDP Sales</businessProcess>
        <label>GDP Opportunities</label>
    </recordTypes>
    <recordTypes>
        <fullName>RCRM_Opportunity</fullName>
        <active>true</active>
        <businessProcess>RCRM Opportunity</businessProcess>
        <description>Used for the sales of products in the scope of the RCRM project.</description>
        <label>RCRM Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>SalesOrder</fullName>
        <active>true</active>
        <businessProcess>Sales Order</businessProcess>
        <description>Short-Cycle sales process based on sales closed on the spot.</description>
        <label>Sales Order</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Block_Opportinities_in_MSO_Accounts</fullName>
        <active>true</active>
        <description>Opportunities cannot be created under an MSO account. They can only be created under the airline headquarter or branch account.</description>
        <errorConditionFormula>AND
(
Account.RecordType.Name = &apos;Agency&apos;,
Text(Account.Category__c) = &apos;MSO Member Sales Office&apos;
)</errorConditionFormula>
        <errorMessage>Opportunities cannot be created under an MSO account. They can only be created under the airline headquarter or branch account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CLOSEDOPP_ORDERNB</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISPICKVAL (StageName, &quot;7. Closed Sales / Sold&quot;),
Order_number__c = &quot;&quot;, $RecordType.Name = &quot;Opportunity&quot;,
NOT(OR($Profile.Name=&quot;IATA IDFS - IDO Sales&quot;, $Profile.Name=&quot;IATA IDFS - IDO Sales + Tariffs&quot;,$Profile.Name=&quot;MACS - Administrator&quot;)))</errorConditionFormula>
        <errorDisplayField>Order_number__c</errorDisplayField>
        <errorMessage>Upon closing an opportunity, you must have an order number or Contract Clearance Form (CCF) number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Early_renewal_only_for_RCRM_renewals</fullName>
        <active>true</active>
        <description>The Early Renewal flag can only be ticked on RCRM opportunities that are renewal opportunities (not for new contracts).</description>
        <errorConditionFormula>AND (
  Early_Renewal__c = true,
  OR (
    RecordType.DeveloperName &lt;&gt; &apos;RCRM_Opportunity&apos;,
    ISBLANK( Expiring_contract__c )
  )
)</errorConditionFormula>
        <errorMessage>The &quot;Early Renewal&quot; box can only be checked on contract renewal opportunities with the &quot;RCRM Opportunity&quot; record type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GDP_Opportunity_No_Product_Required</fullName>
        <active>true</active>
        <description>For GDP Opportunity we wish to block the Standard products add. (Products from the price book)</description>
        <errorConditionFormula>AND(RecordType.Name = &apos;GDP Opportunities&apos;,HasOpportunityLineItem)</errorConditionFormula>
        <errorMessage>Price Book selection not available for GDP Opportunities. Click Cancel to close the product selection page and use the Quote button in your Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Closed_Opportunities</fullName>
        <active>true</active>
        <description>Closed RCRM Opportunities can no longer be edited, except by the System Admin.</description>
        <errorConditionFormula>AND (
  RecordType.DeveloperName = &apos;RCRM_Opportunity&apos;,
  OR(
    AND(
      IsClosed = true,
      NOT ( ISCHANGED (IsClosed) )
    ),
    AND (
      IsClosed = false,
      ISCHANGED (IsClosed)
    )
  ),
  $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
  !$Permission.Can_reopen_opportunities
)</errorConditionFormula>
        <errorMessage>Closed opportunities can no longer be modified. Please contact Support or a System Administrator for help.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Future_Renewal_Opportunities</fullName>
        <active>true</active>
        <description>Ensures that RCRM Opportunities with a &quot;Future Renewal&quot; stage are not manually edited. Their stage is automatically changed when starting the contract renewal process.</description>
        <errorConditionFormula>AND(
  RecordType.DeveloperName = &apos;RCRM_Opportunity&apos;,
  NOT( ISNEW() ),
  ISPICKVAL( PRIORVALUE( StageName ), &apos;Future renewal&apos;),
  NOT( ISPICKVAL( StageName, &apos;Future renewal&apos;) ),
  NOT( ISPICKVAL( StageName, &apos;z. Lost&apos;) ),
  Rejection_reason__c &lt;&gt; &apos;[Starting renewal process]&apos;
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Future Renewal opportunities cannot be manually edited. Please start the Contract Renewal process using the buttons on the Contract Detail page.</errorMessage>
    </validationRules>
</CustomObject>